@@ -1,110 +1,0 @@
-Crossedit - Help
-
-Windows
-
-	Main
-		Look	shows selected stack
-		Arch	list of archetypes to insert
-		Item	insert this archetype
-	Edit		mapeditor itself
-	Attr		archetypes attributes modification
-	Info		refer to end of this text
-
-	     Main                  Map
-	+------------+   +-----------------------+
-	|    Look    |   | File | Edit |         |
-	|            |   +-----------------------+
-	+------------+   |                       |
-	| X  Arch    |   |                       |
-	| X          |   |                       |
-	| X          |   |                       |
-	| X          |   +-----------------------+
-	+------------+
-	|    Item    |
-	|            |
-	+------------+
-
-	    Attr
-	+---------------+
-	|ok|apply|cancel|
-	+---------------+
-	| name:         |
-	|               |
-	|               |
-	+---------------+
-
-Button & Key bindings
-
-	+--------------------------+
-	|+------+ +------+ +------+|
-	||Insert| |Select| |Delete||
-	||      | |      | |      ||
-	|+------+ +------+ +------+|
-	|                          |
-	|      Mouse               |
-	+--------------------------+
-
-	          +------+
-	          | Up   |
-	          +------+           = Arrows
-	 +------+ +------+ +------+
-	 |Left  | | Down | |Right |
-	 +------+ +------+ +------+
-
-Main window
-	[File]	- Look motif style-guide :-) .
-	[Pick]	- toggle monsters and editable.
-	[Info]	- Some kind of information.
-
-Edit window
-	[File]	- Look motif style-guide :-) (again) .
-	[Edit]	- shows information from map
-		[Path]	- pathname of map
-		[Size]	- size of map; adjusting string in form
-			  WIDTHxHEIGHT[+-]SCROLL[+-]SCROLL,
-			  as X-geometry setting,but width and height
-			  set new size, and coordinates gives amount to
-			  scroll from corner. Scramble with this too.
-		[Start]	- startpoint of map. in form: XxY
-		[Read-only]	- read-only toggle
-		[Overwrite]	- overwrite toggle: if set, clears
-				  stack when inserting objects
-		[Auto-Choose]	- choose toggle: if set, chooses
-				  archetype of objects to current item.
-
-	Insert		inserts archetype at the point
-	Select		select archtype to look window
-	Ctrl + Select	feeds coordinates to Attr window
-	Delete		deletes one archetype from point
-	Arrows		Moves map
-	Ctrl + Arrows	Resizes right & bottom border of map
-	Shift + Arrows	Scrolls map
-
-	- to grow for example left border of map: resize map
-	  to right by [Shift+Right], and scroll to right by
-	  [Ctrl+Right]
-
-	- to insert an object to a map choose it first from
-	  Arch-window or from pre-drawn maps with select-key.
-	  Current archetype is shown in Item window.
-
-Arch window
-	Select		select archetype to insert to map
-
-Look window
-	Insert		insert archetype above pointed archetype
-	Select 		select archetype to Attr window
-	Delete		removes archetype from the stack
-
-Attr window
-	- to save attributes of archetype push [apply] or [ok],
-	  pressing [Return] affects new-line into text fields in
-	  this window.
-
-Item window
-	- this window shows only selected archetype to insert
-
-Info Window
-	- guess what :-)
-
-Crossedit - Help - End - Last modification 93/01/30 by hevi@lut.fi
