@@ -251,7 +251,7 @@ difficult for the character to find the trigger points.
 
 
 4) But don't make too much big labyrinths. Making of labyrinths is (too)
-easy with crossedit, just select auto-joining and make zig-zag with mouse.
+easy with Gridarta, just select auto-joining and make zig-zag with mouse.
 But the results of these are quite tiring.  If you make ones, try make
 some idea into it.
 
